force-app/main/default/objects/Inbound_Storage__c/Inbound_Storage__c.object-meta.xml
<CustomObject>
    <label>Inbound Storage</label>
    <nameField>
        <displayFormat>STOR-{00000000}</displayFormat>
        <label>New Storage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Storage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>