force-app/main/default/objects/Inbound_Storage__c/fields/Account_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Segment__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.Account_Sub_Segment_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub-Segment</label>
    <type>Text</type>
</CustomField>