force-app/main/default/objects/Inbound_Storage__c/fields/Admin_Upload_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Upload_Notes__c</fullName>
    <label>Admin Upload Notes</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>