force-app/main/default/objects/Inbound_Storage__c/fields/Associated_to_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Associated_to_Opportunity_Date__c</fullName>
    <description>Date/Time that the inbound storage record was initially associated to a Sale.</description>
    <inlineHelpText>Date/Time that the inbound storage record was initially associated to a Sale.</inlineHelpText>
    <label>Associated to Opportunity Date</label>
    <type>DateTime</type>
</CustomField>