force-app/main/default/objects/Inbound_Storage__c/fields/Association_to_Opportunity_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Association_to_Opportunity_Approved_Date__c</fullName>
    <description>Date/Time that the inbound storage - opportunity link is approved.</description>
    <inlineHelpText>Date/Time that the inbound storage - sale link is approved</inlineHelpText>
    <label>Association to Opportunity Approved Date</label>
    <type>Date</type>
</CustomField>