force-app/main/default/objects/Inbound_Storage__c/fields/Association_to_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Association_to_Opportunity_Status__c</fullName>
    <description>Status of the association between the inbound storage record and the booked sale, managed by the commissions team.</description>
    <inlineHelpText>Status of the association between the inbound storage record and the booked sale.</inlineHelpText>
    <label>Association to Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
                <default>true</default>
                <label>Unmatched</label>
            </value>
            <value>
                <fullName>Matched - Approved</fullName>
            </value>
            <value>
                <fullName>Matched - Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>