force-app/main/default/objects/Inbound_Storage__c/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <formula>Cube_District__r.Parent_Billing_Market__r.Territory__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Region</label>
    <type>Text</type>
</CustomField>