force-app/main/default/objects/Inbound_Storage__c/fields/Box__c.field-meta.xml
<CustomField>
    <fullName>Box__c</fullName>
    <label>Box Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>