force-app/main/default/objects/Inbound_Storage__c/fields/CM_Ending_Current_Month_Cube__c.field-meta.xml
<CustomField>
    <fullName>CM_Ending_Current_Month_Cube__c</fullName>
    <formula>IF( 
AND( 
MONTH(Storage_Date__c)= VALUE($Label.Current_End_Cube_Period), 
YEAR(Storage_Date__c)= VALUE($Label.Current_Cube_Year) 
), 
Ending_Current_Month_Cube__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Ending Current Month Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>