force-app/main/default/objects/Inbound_Storage__c/fields/Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Notes__c</fullName>
    <description>This tracks notes on records that need to be sent to a Sales Director for review.</description>
    <inlineHelpText>This tracks notes on records that need to be sent to a Sales Director for review.</inlineHelpText>
    <label>Commission Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>