force-app/main/default/objects/Inbound_Storage__c/fields/Country_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Country_Coverage__c</fullName>
    <formula>TEXT( Cube_District__r.Parent_Billing_Market__r.Country_Coverage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Coverage</label>
    <type>Text</type>
</CustomField>