force-app/main/default/objects/Inbound_Storage__c/fields/Cube_District__c.field-meta.xml
<CustomField>
    <fullName>Cube_District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cube District</label>
    <referenceTo>Billing_Market__c</referenceTo>
    <relationshipName>New_Storage</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>