force-app/main/default/objects/Inbound_Storage__c/fields/Cube_District_Name__c.field-meta.xml
<CustomField>
    <fullName>Cube_District_Name__c</fullName>
    <formula>Cube_District__r.Market_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cube District Name</label>
    <type>Text</type>
</CustomField>