force-app/main/default/objects/Inbound_Storage__c/fields/Current_Cube_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Cube_Period__c</fullName>
    <formula>IF( 
AND( 
MONTH(Storage_Date__c)= VALUE($Label.Current_End_Cube_Period), 
YEAR(Storage_Date__c)= VALUE($Label.Current_Cube_Year) 
), 
&quot;YES&quot; , 
&quot;NO&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Cube Period?</label>
    <type>Text</type>
</CustomField>