force-app/main/default/objects/Inbound_Storage__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipName>New_Storage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>