force-app/main/default/objects/Inbound_Storage__c/fields/Customer_Account_Billing_Mkt__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Billing_Mkt__c</fullName>
    <formula>Customer_Account__r.Name+&quot;-&quot;+Cube_District__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account - Billing Mkt</label>
    <type>Text</type>
</CustomField>