force-app/main/default/objects/Inbound_Storage__c/fields/CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Revenue__c</fullName>
    <formula>IF ( VALUE(Storage_Year__c)= VALUE($Label.Current_Commission_Year), Total_Revenue__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>