force-app/main/default/objects/Inbound_Storage__c/fields/CY_Volume__c.field-meta.xml
<CustomField>
    <fullName>CY_Volume__c</fullName>
    <formula>IF(VALUE(Storage_Year__c)= VALUE($Label.Current_Cube_Year), Total_Volume__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>