force-app/main/default/objects/Inbound_Storage__c/fields/CY_Volume_Converted__c.field-meta.xml
<CustomField>
    <fullName>CY_Volume_Converted__c</fullName>
    <formula>IF(VALUE(Storage_Year__c)= VALUE($Label.Current_Commission_Year),Inbound_Outbound_Conversion__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Volume (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>