force-app/main/default/objects/Inbound_Storage__c/fields/DELETE_For_Export_Only__c.field-meta.xml
<CustomField>
    <fullName>DELETE_For_Export_Only__c</fullName>
    <formula>Customer_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE - For Export Only</label>
    <type>Text</type>
</CustomField>