force-app/main/default/objects/Inbound_Storage__c/fields/Dept_ID_del__c.field-meta.xml
<CustomField>
    <fullName>Dept_ID_del__c</fullName>
    <label>Dept. ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>