force-app/main/default/objects/Inbound_Storage__c/fields/Div_ID_del__c.field-meta.xml
<CustomField>
    <fullName>Div_ID_del__c</fullName>
    <label>Div. ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>