force-app/main/default/objects/Inbound_Storage__c/fields/EFS_Indicator__c.field-meta.xml
<CustomField>
    <fullName>EFS_Indicator__c</fullName>
    <label>EFS Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>