force-app/main/default/objects/Inbound_Storage__c/fields/Ending_Current_Month_Cube__c.field-meta.xml
<CustomField>
    <fullName>Ending_Current_Month_Cube__c</fullName>
    <label>Ending Current Month Cube</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>