force-app/main/default/objects/Inbound_Storage__c/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <description>Required for the Commissions Extract.</description>
    <formula>IF( ISNULL(Opportunity__c), &quot;&quot;, IF( Opportunity_Type__c = &quot;New Deal&quot;, &quot;New&quot;, &quot;Existing&quot;))</formula>
    <label>Existing Customer</label>
    <type>Text</type>
</CustomField>