force-app/main/default/objects/Inbound_Storage__c/fields/IMGA_Name__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Name__c</fullName>
    <description>Returns the indexed IMGA Name on the Account linked to the Customer Account</description>
    <formula>Customer_Account__r.IM_Account__r.IM_IMGA_Indexed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA Name</label>
    <type>Text</type>
</CustomField>