force-app/main/default/objects/Inbound_Storage__c/fields/Include_in_Storage_YTD__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Storage_YTD__c</fullName>
    <formula>IF (MONTH(Storage_Date__c) &lt;= VALUE($Label.Current_End_Cube_Period) , &quot;Include&quot; , &quot;Exclude&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Storage YTD</label>
    <type>Text</type>
</CustomField>