force-app/main/default/objects/Inbound_Storage__c/fields/Internal_Commissions_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Commissions_Notes__c</fullName>
    <description>Internal notes for commissions team. Should only be visible to commissions.</description>
    <inlineHelpText>Internal notes for Commissions users only.</inlineHelpText>
    <label>Internal Commissions Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>