force-app/main/default/objects/Inbound_Storage__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <label>Legal Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>