force-app/main/default/objects/Inbound_Storage__c/fields/LF__c.field-meta.xml
<CustomField>
    <fullName>LF__c</fullName>
    <label>LF Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>