force-app/main/default/objects/Inbound_Storage__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Opportunity which produced the new storage</description>
    <inlineHelpText>Link to the Opportunity which produced the new storage</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>New_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>