force-app/main/default/objects/Inbound_Storage__c/fields/Opportunity_Owner_s_Role_Text__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_s_Role_Text__c</fullName>
    <description>Original Opportunity Owner&apos;s role converted to text via workflow.</description>
    <label>Opportunity Owner&apos;s Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>