force-app/main/default/objects/Inbound_Storage__c/fields/Parent_Cube_Market__c.field-meta.xml
<CustomField>
    <fullName>Parent_Cube_Market__c</fullName>
    <formula>Cube_District__r.Parent_Billing_Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Cube Market</label>
    <type>Text</type>
</CustomField>