force-app/main/default/objects/Inbound_Storage__c/fields/PLUS_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>PLUS_Code_Text__c</fullName>
    <description>Original Opportunity Owner&apos;s PLUS Code in text</description>
    <label>PLUS Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>