force-app/main/default/objects/Inbound_Storage__c/fields/PM_Ending_Current_Month_Cube__c.field-meta.xml
<CustomField>
    <fullName>PM_Ending_Current_Month_Cube__c</fullName>
    <formula>IF(
	AND(
		MONTH(Storage_Date__c)= 12,
		VALUE($Label.Current_End_Cube_Period)= 1, 
		YEAR(Storage_Date__c)= (VALUE($Label.Current_Cube_Year)-1)
		),
	Ending_Current_Month_Cube__c,
	IF( 
		AND( 
			MONTH(Storage_Date__c)= (VALUE($Label.Current_End_Cube_Period)-1), 
			YEAR(Storage_Date__c)= VALUE($Label.Current_Cube_Year) 
			), 
		Ending_Current_Month_Cube__c, 
		0 
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Ending Current Month Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>