force-app/main/default/objects/Inbound_Storage__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>Required for Commissions Extract. Feeds a formula field called Project_ID_Formula__c</description>
    <label>Project ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>