force-app/main/default/objects/Inbound_Storage__c/fields/Project_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_Formula__c</fullName>
    <description>Required for Commissions Extract. Defaults to Customer Account Name if the Project_ID__c field is blank.</description>
    <formula>IF( Project_ID__c = &quot;&quot;,  Customer_Account__r.IM_Customer_Account_Name__c , Project_ID__c )</formula>
    <label>Project ID Formula</label>
    <type>Text</type>
</CustomField>