force-app/main/default/objects/Inbound_Storage__c/fields/PY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PY_Revenue__c</fullName>
    <formula>IF ( VALUE(Storage_Year__c)= (VALUE($Label.Current_Commission_Year) - 1), Total_Revenue__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>