force-app/main/default/objects/Inbound_Storage__c/fields/PY_Total_Cube__c.field-meta.xml
<CustomField>
    <fullName>PY_Total_Cube__c</fullName>
    <description>Total Cube from the previous year</description>
    <label>PY Total Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>