force-app/main/default/objects/Inbound_Storage__c/fields/PY_Volume_Converted__c.field-meta.xml
<CustomField>
    <fullName>PY_Volume_Converted__c</fullName>
    <formula>IF(VALUE(Storage_Year__c)=(VALUE($Label.Current_Commission_Year) - 1),Inbound_Outbound_Conversion__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY Volume (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>