force-app/main/default/objects/Inbound_Storage__c/fields/PY_YTD_Volume__c.field-meta.xml
<CustomField>
    <fullName>PY_YTD_Volume__c</fullName>
    <formula>IF(VALUE(Storage_Year__c)=(VALUE($Label.Current_Commission_Year) - 1),Ending_Current_Month_Cube__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY YTD Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>