force-app/main/default/objects/Inbound_Storage__c/fields/Rejection_Code__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Code__c</fullName>
    <description>For Comissions</description>
    <label>Rejection Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F4</fullName>
            </value>
            <value>
                <fullName>F5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>