force-app/main/default/objects/Inbound_Storage__c/fields/Sales_Director_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_s_Notes__c</fullName>
    <description>Tracks feedback from Sales Director when a record is rejected.</description>
    <inlineHelpText>Tracks feedback from Sales Director when a record is rejected.</inlineHelpText>
    <label>Sales Director&apos;s Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>