force-app/main/default/objects/Inbound_Storage__c/fields/Sales_Director_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_User_ID__c</fullName>
    <description>Director&apos;s User ID. Needed for Commissions report of Rejected Inbound Storage for Director Review</description>
    <formula>Opportunity__r.Owner_Link__r.IM_RSM__r.Id</formula>
    <label>Sales Director User ID</label>
    <type>Text</type>
</CustomField>