force-app/main/default/objects/Inbound_Storage__c/fields/Storage_Year__c.field-meta.xml
<CustomField>
    <fullName>Storage_Year__c</fullName>
    <formula>TEXT (YEAR (Storage_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storage Year</label>
    <type>Text</type>
</CustomField>