force-app/main/default/objects/Inbound_Storage__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>X1891_Revenue__c  +  X1892_Revenue__c  +  X1893_Revenue__c  +  X1894_Revenue__c  +  X1895_Revenue__c  +  X1896_Revenue__c  +  HC_or_Vault_Storage_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>