force-app/main/default/objects/Inbound_Storage__c/fields/Total_Revenue_String__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_String__c</fullName>
    <description>Total Revenue without &apos;USD&apos;. Needed for Commissions Extract.</description>
    <formula>&quot;$&quot; &amp; IF(Total_Revenue__c &lt; 1.00, &quot;0&quot; &amp; TEXT(Total_Revenue__c), TEXT(Total_Revenue__c))</formula>
    <label>Total Revenue String</label>
    <type>Text</type>
</CustomField>