force-app/main/default/objects/Inbound_Storage__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <formula>Box__c + Medical__c  +  Legal__c  +  X_Ray__c  +  Other__c  +   LF_Slides__c   +   LF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>