force-app/main/default/objects/Inbound_Storage__c/fields/Track_Thru_Date__c.field-meta.xml
<CustomField>
    <fullName>Track_Thru_Date__c</fullName>
    <description>This denotes the end of the Commissionable window. Defaults to 6 months from Opportunity &apos;Close Date&apos;.</description>
    <formula>Opportunity__r.Commissionable_Window_Close_Date__c</formula>
    <inlineHelpText>This denotes the end of the Commissionable window.</inlineHelpText>
    <label>Track Thru Date</label>
    <type>Date</type>
</CustomField>