force-app/main/default/objects/Inbound_Storage__c/fields/VP_Text__c.field-meta.xml
<CustomField>
    <fullName>VP_Text__c</fullName>
    <description>Original VP that this Opportunity rolled up to</description>
    <label>VP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>