force-app/main/default/objects/Inbound_Storage__c/fields/X1891_Rate__c.field-meta.xml
<CustomField>
    <fullName>X1891_Rate__c</fullName>
    <inlineHelpText>Medical</inlineHelpText>
    <label>1891-Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>