force-app/main/default/objects/Inbound_Storage__c/fields/X1891_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X1891_Revenue__c</fullName>
    <formula>X1891_Rate__c  *  Medical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Medical</inlineHelpText>
    <label>1891 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>