force-app/main/default/objects/Inbound_Storage__c/fields/X1893_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X1893_Revenue__c</fullName>
    <formula>X1893_Rate__c  *  X_Ray__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>X-Ray</inlineHelpText>
    <label>1893 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>