force-app/main/default/objects/Inbound_Storage__c/fields/X1894_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X1894_Revenue__c</fullName>
    <formula>X1894_Rate__c  *  Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Other</inlineHelpText>
    <label>1894 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>