force-app/main/default/objects/Inbound_Storage__c/fields/X1896_Rate__c.field-meta.xml
<CustomField>
    <fullName>X1896_Rate__c</fullName>
    <inlineHelpText>Linear Footage - Slides</inlineHelpText>
    <label>1896-Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>