force-app/main/default/objects/Inbound_Storage__c/fields/X5790_Rate__c.field-meta.xml
<CustomField>
    <fullName>X5790_Rate__c</fullName>
    <inlineHelpText>Climate Control Storage - Vault Storage</inlineHelpText>
    <label>5790-Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>