force-app/main/default/objects/Inbound_Storage__c/fields/X890_Rate_String__c.field-meta.xml
<CustomField>
    <fullName>X890_Rate_String__c</fullName>
    <description>890 Rate without USD. Required for Commissions Extract</description>
    <formula>&quot;$&quot; &amp; IF(X890_Rate__c &lt; 1.00, &quot;0&quot; &amp; TEXT(X890_Rate__c), TEXT(X890_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>890 Rate String</label>
    <type>Text</type>
</CustomField>