force-app/main/default/objects/Inbound_Storage__c/recordTypes/Acquisition_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Acquisition_Adjustment</fullName>
    <active>true</active>
    <label>Acquisition/Adjustment</label>
</RecordType>