force-app/main/default/objects/Inbound_Storage__c/recordTypes/Destruction.recordType-meta.xml
<RecordType>
    <fullName>Destruction</fullName>
    <active>true</active>
    <label>Destruction</label>
</RecordType>