force-app/main/default/objects/Inbound_Storage__c/recordTypes/Inbound_Storage.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Storage</fullName>
    <active>true</active>
    <description>Inbound Cube that the customer has been billed for</description>
    <label>Inbound Storage</label>
</RecordType>