force-app/main/default/objects/Inbound_Storage__c/recordTypes/PW.recordType-meta.xml
<RecordType>
    <fullName>PW</fullName>
    <active>true</active>
    <label>PW</label>
</RecordType>