force-app/main/default/objects/Inbound_Storage__c/recordTypes/Standard_Entry.recordType-meta.xml
<RecordType>
    <fullName>Standard_Entry</fullName>
    <active>true</active>
    <description>used for standard entries that are loaded monthly by a system admin</description>
    <label>Standard Entry</label>
</RecordType>