force-app/main/default/objects/Inbound_Storage__c/recordTypes/Total_Incoming_Cube.recordType-meta.xml
<RecordType>
    <fullName>Total_Incoming_Cube</fullName>
    <active>true</active>
    <description>All inbound cube, billed and not billed</description>
    <label>Total Incoming Cube</label>
</RecordType>