force-app/main/default/objects/Inbound_Storage__c/validationRules/BW_Opp_Association_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>BW_Opp_Association_Status_Update</fullName>
    <active>true</active>
    <description>Created by Bluewolf

Only the IM_Commissions or Custom_Sys_Admin profiles may update the Association_To_Opportunity_Status__c field

-----------------
Edited by Narayan Iyer - Added &quot;IME_Custom Sys Admin&quot; to the validation rule.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;IM_Commissions&quot;, $Profile.Name &lt;&gt; &quot;IM_Custom Sys Admin&quot;, $Profile.Name &lt;&gt; &quot;IME_Custom Sys Admin&quot;)</errorConditionFormula>
    <errorDisplayField>Association_to_Opportunity_Status__c</errorDisplayField>
    <errorMessage>You do not have the necessary permissions to edit this field.</errorMessage>
</ValidationRule>