force-app/main/default/objects/Inbound_Storage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Associated_to_Opportunity_Date__c</columns>
    <columns>Association_to_Opportunity_Approved_Date__c</columns>
    <columns>Association_to_Opportunity_Status__c</columns>
    <columns>Combined_Month__c</columns>
    <columns>Invoice__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Revenue_Code__c</columns>
    <division>*</division>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>