force-app/main/default/objects/Inbound_Storage__c/listViews/Associations_This_Month_Pending.listView-meta.xml
<ListView>
    <fullName>Associations_This_Month_Pending</fullName>
    <columns>NAME</columns>
    <columns>Customer_Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Commission_Month__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>Total_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_to_Opportunity_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inbound_Storage__c.Inbound_Storage</value>
    </filters>
    <filters>
        <field>Association_to_Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Matched - Pending</value>
    </filters>
    <label>Associations This Month - Pending</label>
    <language>en_US</language>
</ListView>